// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleBig className 1`] = `
<ToggleBig
  className="c"
>
  <button
    className="toggleBig container c"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
    role="switch"
    type="button"
    value={0}
  >
    <span
      className="bar"
    />
    <span
      className="barShadow"
    />
    <span
      className="d-flex flex-column justify-content-center align-items-center knob"
    />
    <span
      className="text"
    >
      Disabled
    </span>
  </button>
</ToggleBig>
`;

exports[`ToggleBig disabled 1`] = `
<ToggleBig
  disabled={true}
  onToggle={[Function]}
>
  <button
    className="toggleBig container"
    disabled={true}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
    role="switch"
    type="button"
    value={0}
  >
    <span
      className="bar"
    />
    <span
      className="barShadow"
    />
    <span
      className="d-flex flex-column justify-content-center align-items-center knob"
    />
    <span
      className="text"
    >
      Disabled
    </span>
  </button>
</ToggleBig>
`;

exports[`ToggleBig value is false 1`] = `
<ToggleBig
  value={false}
>
  <button
    aria-checked={false}
    className="toggleBig container"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
    role="switch"
    type="button"
    value={0}
  >
    <span
      className="bar"
    />
    <span
      className="barShadow"
    />
    <span
      className="d-flex flex-column justify-content-center align-items-center knob"
    />
    <span
      className="text"
    >
      Disabled
    </span>
  </button>
</ToggleBig>
`;

exports[`ToggleBig value is true 1`] = `
<ToggleBig
  value={true}
>
  <button
    aria-checked={true}
    className="toggleBig container"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
    role="switch"
    type="button"
    value={1}
  >
    <span
      className="bar barOn"
    />
    <span
      className="barShadow barShadowOn"
    />
    <span
      className="d-flex flex-column justify-content-center align-items-center knob knobOn"
    >
      <Memo(CheckIcon)
        className="iconOn"
        size={16}
      />
    </span>
    <span
      className="text textOn"
    >
      Enabled
    </span>
  </button>
</ToggleBig>
`;
